# animtool

./: CMakeLists.txt
src/: animation.cpp  animation.h  animationcommands.cpp  animationcommands.h  animtool.cpp  animtool.h  command.cpp  command.h  editcommands.cpp  editcommands.h  export.cpp  export.h  ik.cpp  ik.h  ikcommands.cpp  ikcommands.h  main.cpp  part.h  partcommands.cpp  partcommands.h  project.cpp  project.h  projectfile.cpp  tablemodel.cpp  tablemodel.h  view.cpp  view.h  xcf.cpp  xcf.h
ui/: anim.qrc  anim.ui  export.ui
